spring server project generated, angular project generated, client and server side api implementation generated
